--- a/_posts/2019-01-10-java基础.md
+++ b/_posts/2019-01-10-java基础.md
@@ -387,4 +387,52 @@ hashMap.containsValue(1);
 
 > 对于存在的key，调用replace方法，会替换原来的value，并返回旧value，这和put的效果是一样的；对于不存在的key，replace方法什么都不做。这就是他和put的区别（put在key不存在时将新key-value加入map）
 
-### 10,
+### 10,Map的使用
+
+##### HashMap,TreeMap,LinkedHashMap的简单应用
+
+> HashMap是随机的，TreeMap是按照元素的大小顺序排列的，LinkedHashMap是按照添加的顺序排列的。
+
+```java
+package com.lxk.collectionTest;
+ 
+import com.google.common.collect.Maps;
+ 
+import java.util.Map;
+ 
+/**
+ * 测试Map是否有序的区别
+ * <p>
+ * Created by lxk on 2017/5/24
+ */
+public class OrderedMapTest {
+    public static void main(String[] args) {
+        Map<String, Integer> hashMap = new HashMap<>();
+        Map<String, Integer> treeMap = new TreeMap<>();
+        Map<String, Integer> linkedHashMap = new LinkedHashMap<>();
+        System.out.println("--------------test hashMap");
+        testMap(hashMap);
+        System.out.println("--------------test treeMap");
+        testMap(treeMap);
+        System.out.println("--------------test linkedHashMap");
+        testMap(linkedHashMap);
+    }
+ 
+    private static void testMap(Map<String, Integer> map) {
+        map.put("asd", 1);
+        map.put("2das", 2);
+        map.put("3das", 3);
+        map.put("4das", 4);
+        //这也是map的一种遍历方式，增强for
+        for (Map.Entry<String, Integer> entry : map.entrySet()) {
+            System.out.println(entry.getKey() + ":" + entry.getValue());
+        }
+    }
+ 
+}
+```
+
+结果如下：
+
+![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/x28.png)
+
