--- a/_posts/2019-03-20-Offer.md
+++ b/_posts/2019-03-20-Offer.md
@@ -187,6 +187,86 @@ for(Integer number : arrayList){
  //integer2 = arrayList.toArray();
 ```
 
+##### Array和ArrayList的区别：
+
+ArrayList内部是由一个Array实现的，`ArrayList` 是Java集合框架类的一员,可以称它为一个动态数组. `array` 是静态的,所以一个数据一旦创建就无法更改他的大小, 所以, 如果需要一个数组可以重新定义他的大小,你应该使用 `ArrayList`, 这是`array` 和`ArrayList`的基本的不同。
+
+* Implementation 实现
+
+`array` 是本地的程序设计组件或者数据结构,但是`ArrayList`是一个来自Java集合类的类,一个接口 (Application programming interface). 实际上,`ArrayList` 在Java上,它的内部是由一个`array`实现的. 既然`ArrayList`是一个类,所以它持有了所有类的属性.例如,你可以创建对象,可以调用方法,但`array`并不提供任何方法. 它仅仅暴露了一个常量的长度来表示当前数组的长度。
+
+* Performance 性能
+
+既然`ArrayList`是基于`array`,所以你可能会认为它提供和`array`一样的性能. 这个假设在一定程度上是成立的,但是在一些额外功能性的`ArrayList`上性能还是和`array` 存在一定差别, 主要是内存的使用和CPU 耗时. 在索引上,`ArrayList`和`array`都能提供O(1)的时间复杂度,但是在添加item的时候如果出发resize,`ArrayList`可能会是O(logN)的时间复杂度,因为它包含了创建一个新的`array` 和[将老的`array`的数据拷贝到新的`array`里](http://javarevisited.blogspot.com.au/2011/06/converting-%60array%60-to-%60ArrayList%60-in-java.html). 在存储相同数量的对象时,`ArrayList`所需要的内存也是比`array`大的. 例如一个int[] 的数组会比`ArrayList`节省20个int 变量的大小,因为对象的基本数据会在`ArrayList`和包装类上进行开销.
+
+* Type Safety 类型安全
+
+`ArrayList` 是类型安全的,因为它支持泛型(Generics) 允许编译器检查 `ArrayList` 里所包含的对象是否是正确的类型.然而, `array` 并不支持泛型.这代表在编译时期检查`array` 所保存对象的类型是不可能的,但是`array` 通过抛出 `ArrayStoreException` 异常的方式来进行运行时的类型检查如果你存储了一个错误类型的对象,例如,`存储一个String` 到 `int` `array` 里
+
+* Flexibility 灵活性
+
+灵活性是区分`array` 和 `ArrayList`最重要的一个东西,简单来说,`ArrayList`比简单的`array`要灵活的多,因为 `ArrayList` 是动态的,它可以在需要的时候扩大自己的内存,这是一个 `array` 不可能做到的.`ArrayList` 也允许你删除元素, 这在`array`上也是不可能的.通过删除,我的意思并不是将null置于对应的index里,而是将所删除元素的后面所有元素的index都往前移动一位,这些都是`ArrayList`自动为我们做的.你可以从我的文章里学到更多关于从`ArrayList`里删除对象[difference between clear() and removeAll()](http://javarevisited.blogspot.com/2015/09/how-to-reset-%60ArrayList%60-in-java-clear-vs-removeAll-example.html)
+
+* Primitives 基本类型
+
+如果你第一次开始使用Arraylis,你会发现,你不能保存基本类型到`ArrayList`里,这是`array`和`ArrayList`一个关键的不同,因为`array`既可以保存对象也可以保存基本类型.例如.int[]数组是合法的,但是一个int型的`ArrayList`是不合法的. 如何解决这个问题呢? 假设你想存储int类型到`ArrayList`里,你会怎么做呢? 是的,你可以用封装类,这就是封装类被引进java的原因之一.所以,从java5开始,这个区别越来越不明显了,因为通过自动封装你会发现``ArrayList`.add(21)`是非常合法并且运行正常.
+
+* Generics 泛型
+
+`ArrayList`和`array`之间的另外一个重要的区别就是前者能够显示的支持泛型,后者不行.由于数组是协变性的,所以你可以在`array`上使用泛型(`Since an `array` is of covariant type, you can use Generics with them`).这个表示编译器不可能检查`array`的类型安全,但是可以校验类型安全.当你要写一个类型安全的类的时候如何解决这个问题呢?好吧,你可以用里展示的技术,通过申明一个类似于E[]的数组,然后后期进行类型转换.
+
+* Iteration 迭代
+
+`ArrayList` 提供比`array`更多的方式来迭代一个接一个的访问所有的元素.可以通过for,while等循环来遍历`array`,但是你可以通过`Iterator` 和`ListIterator`类来遍历`ArrayList`.看[这里](http://java67.blogspot.com/2012/08/how-to-traverse-iterate-or-loop-%60ArrayList%60-in-java-example-tutorial.html)来了解更多的遍历`ArrayList`的方式.
+
+* Supported Operations 支持的操作
+
+由于`ArrayList`的内部是由一个`array`支撑着,所以它暴露了能够在`array`可能支持的操作,并且还提供了它动态的属性.它也支持添加操作,这是在`array`上不可能的.你可以同时在`array`和`ArrayList`上存储元素,但是仅`ArrayList`允许你删除元素.然而你可以通过模拟将null赋值到对应的index里来模拟删除.这个模拟不会像是删除,除非你同时将所删除元素对应的索引(index)移动到下一级
+
+```
+ArrayList`和`array`头提供取元素的方法.例如`ArrayList`用索引通过get()方法来获取一个元素, version[0]将会返回`array`的第一个元素.`ArrayList`也提供一个方法来清空和重用例如,`clear()` 和 `removeAll()`.`array`并不提供那些方发,但是你可以通过循环这个数组来将null赋值到所有的元素里来模拟`ArrayList`的`removeAll()
+```
+
+* Size() vs length 大小 vs 长度
+
+`array` 仅仅提供一个`length` 属性来告诉你`array`里有多少个插槽,例如可以存储多少个元素.它没有提供任何方法来告诉你哪些插槽是满的,哪些是空的.例如,当前元素的个数.但是`ArrayList`提供一个`size()`方法来告诉你当前时间点`ArrayList`存储了多少个元素.`size()` 总是和`length`不同的,它也是`ArrayList`的容量.如果你想知道更多关于这个的知识,我建议你阅读这篇文章文章[`array` length vs `ArrayList` Size in Java](http://java67.blogspot.com/2014/04/%60array%60-length-vs-%60ArrayList%60-size-java.html)
+
+* Dimension 维度
+
+`ArrayList`和`array`的另外一个重要的区别就是`array`可以使多维度的.例如,你可以设置一个二维数组或者三维数组.可以使你创在一个特殊的数据结构来代表矩阵或者2D形式(`terrains`),另一方面,`ArrayList`并不支持允许你指定维度.请参见[这个指导](http://java67.blogspot.com/2014/10/how-to-create-and-initialize-two-dimensional-%60array%60-java-example.html)来学习更多关于如何在Java里使用多维度的数组.
+
+这里是列出了所有`ArrayList`和`array`的重要区别![difference](http://7fvfrr.com1.z0.glb.clouddn.com/Difference%20between%20Array%20vs%20%60ArrayList%60%20in%20Java.png)
+
+`相似之处`
+
+1) Data Structure 数据结构
+
+两者都允许你存数对象,并且所有的都是基于index的数据结构,提供O(1)的复杂度来获取一个元素,但是如果通过[二分查找](http://javarevisited.blogspot.com/2014/03/binary-search-vs-contains-performance.html)来查询某个元素依旧需要log(N)的复杂度.
+
+2) Order 顺序(没太理解这句话的意思)
+
+Both `array` and `ArrayList` maintains order on which elements are added into them. (`array`和`ArrayList`都保持着元素的顺序?)
+
+3) Search 查找
+
+你可以通过index来查找一个元素,这个是O(1)的时间复杂度,除此之外如果你的`array`不是排好序的数组你可以用线性的查找,这个将消耗大约O(n)的时间复杂度,或者你可以将数组排序后使用二分查找,这个将消耗排序的时间复杂度加上O(logN)
+
+4) Null values 空值
+
+`array` 和 `ArrayList`都允许存储null值,但请记住只有object的`array`可以这样,基本类型的数组会存储他们的默认值,例如int型的数组默认存储0,boolean的数组默认存储false.
+
+5) Duplicates 重复
+
+`array`和Arraylis都允许存储重复的值,
+
+6) Performance 性能
+
+`ArrayList`模仿`array`的性能,例如O(1)复杂度的访问元素如果你知道这个元素的index,但是`ArrayList`会消耗更多的内存,因为它是存储的对象,并且持有了而外的数据来自动更改`ArrayList`的长度.
+
+7) Zero-based Index
+
+这些就是关于`array`和`ArrayList`的所有不同点啦,其中你需要记住的最重要的不同点就是`array`是静态的,你无法一旦创建了一个数组就无法更改它的大小,但是`ArrayList`因为是动态的,所以它可以做到.根据这个不同点,如果你事先知道数组的长度,并且确定它的大小不会改变,你应该使用`array`,否则请使用`ArrayList`吧
+
 ### 2.1,vector数组
 
 > Vector 可实现自动增长的对象数组
@@ -1026,7 +1106,11 @@ public class Solution {
     }
 ```
 
-##### 3，
+##### 3，二叉树的所有路径
+
+[参考1](<https://www.jianshu.com/p/71271d7ba0f4>)
+
+[参考2](<https://blog.csdn.net/orz_713/article/details/64440706>)
 
 ### 12,二维数组
 
@@ -1170,9 +1254,271 @@ Math.pow(a,3)：即等于求a的3次方，Math方法直接是在Java.lang
 
 Character.valueOf( )：输出字符的asc码值，0-48，A对应65，a对应97
 
-### 17，转移字符
+### 17，转义字符
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/lab.png)
 
 ![md文件名格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/lab2.png)
+
+### 18,树的前序，中序，后序的递归与非递归遍历
+
+> 非递归用栈
+
+##### 1，前序
+
+```java
+/*class BinaryTree{  
+public int value;  
+public BinaryTree leftNode;  
+public BinaryTree rightNode;  
+BinaryTree(int x) { value = x; }  
+} */
+
+//递归
+void preOrder(BinaryTree root){
+	if(root !=null){
+	System.out.println(root.value);
+	preOrder(root.left);
+	preOrder(root.right);
+	}
+}
+//非递归
+public static ArrayList<Integer> preOrder(TreeNode root){
+        Stack<TreeNode> stack = new Stack<TreeNode>();
+        ArrayList<Integer> list = new ArrayList<Integer>();
+        if(root == null){
+            return list;
+        }
+        stack.push(root);
+        while(!stack.empty()){
+            TreeNode node = stack.pop();
+            list.add(node.data);
+            if(node.rightNode!=null){
+                stack.push(node.rightNode);
+            }
+            if(node.leftNode!= null){
+                stack.push(node.leftNode);
+            }
+
+        }
+        System.out.println(list);
+        return list;
+    }
+//递归
+private void traversal(TreeNode root, List<Integer> results) {
+        if (root == null) {
+            return;
+        }
+        results.add(root.val);
+        traversal(root.left, results);
+        traversal(root.right, results);
+    }
+}
+
+```
+
+
+
+##### 2，中序
+
+[参考](<https://www.jianshu.com/p/3dda8f348cd0>)
+
+```java
+/**
+ * Definition of TreeNode:
+ * public class TreeNode {
+ *     public int val;
+ *     public TreeNode left, right;
+ *     public TreeNode(int val) {
+ *         this.val = val;
+ *         this.left = this.right = null;
+ *     }
+ * }
+ */
+//非递归
+public class Solution {
+    /**
+     * @param root: The root of binary tree.
+     * @return: Inorder in ArrayList which contains node values.
+     */
+    public ArrayList<Integer> inorderTraversal(TreeNode root) {
+        Stack<TreeNode> stack = new Stack<TreeNode>();
+        ArrayList<Integer> result = new ArrayList<Integer>();
+        TreeNode curt = root;
+        // curt == null && stack 非空 说明当前结点为二叉树叶子结点，中序遍历还未结束
+        while (curt != null || !stack.empty()) {
+            while (curt != null) {
+                // 一直找，找到最左边结点，即中序遍历输出的第一个结点
+                stack.push(curt);
+                curt = curt.left;
+            }
+            // 此时当前结点的左儿子已经为空
+            curt = stack.pop();
+            result.add(curt.val);
+            /* 当前结点的右儿子如果为空，证明当前结点是叶子结点则会进入下一轮while循环，
+             * 当栈不为空时会 pop 出当前结点的根结点，curt 指向新的结点
+             */
+            curt = curt.right;
+        }
+        return result;
+    }
+}
+//递归
+public class Solution {
+    /*
+     * @param root: A Tree
+     * @return: Inorder in ArrayList which contains node values.
+     */
+    public List<Integer> inorderTraversal(TreeNode root) {
+        List<Integer> results = new ArrayList<>();
+        traversal(root, results);
+        return results;
+    }
+    
+    private void traversal(TreeNode root, List<Integer> results) {
+        if (root == null) {
+            return;
+        }
+        
+        traversal(root.left, results);
+        results.add(root.val);
+        traversal(root.right, results);
+    }
+}
+//递归+遍历
+public class Solution {
+    /*
+     * @param root: A Tree
+     * @return: Inorder in ArrayList which contains node values.
+     */
+    public List<Integer> inorderTraversal(TreeNode root) {
+        List<Integer> results = new ArrayList<>();
+        
+        if (root == null) {
+            return results;
+        }
+        
+        List<Integer> left = inorderTraversal(root.left);
+        List<Integer> right = inorderTraversal(root.right);
+        
+        results.addAll(left);
+        results.add(root.val);
+        results.addAll(right);
+        
+        return results;
+    }
+}
+//分治+递归
+public class Solution {
+    /*
+     * @param root: A Tree
+     * @return: Inorder in ArrayList which contains node values.
+     */
+    public List<Integer> inorderTraversal(TreeNode root) {
+        List<Integer> results = new ArrayList<>();
+        
+        if (root == null) {
+            return results;
+        }
+        
+        List<Integer> left = inorderTraversal(root.left);
+        List<Integer> right = inorderTraversal(root.right);
+        
+        results.addAll(left);
+        results.add(root.val);
+        results.addAll(right);
+        
+        return results;
+    }
+}
+```
+
+##### 3，后序
+
+```java
+//非递归
+//参考1：
+public static void postorderfun(BTree root){
+		Stack<BTree> stack =new Stack<BTree>();
+		BTree proot;//标记栈顶元素前一个被访问的元素
+		int flag;//root的左孩子未被访问；
+		if(root!=null){
+			do{
+				while(root!=null){//将root所有左孩子全部入栈
+					stack.push(root);
+					root=root.left;
+				  }
+				
+				//执行到此处，栈顶元素没有左孩子或者左子树已经被访问过；
+				proot=null;//标记栈顶元素前一个被访问的元素，或者此时为最左下边，该元素前一个被访问的元素肯定为空。
+				flag=1;//root的左孩子已经被访问；或者root为null
+				
+				while(!stack.isEmpty() && flag==1){
+					root=stack.peek();       //取到栈顶元素，但是不出栈；
+					if(root.right==proot){
+						root=stack.pop();
+						System.out.print(root.value+"  ");
+						proot=root;
+					}else{
+						root=root.right;
+						flag=0;//root左边孩子未被访问；
+					}
+				}
+			}while(!stack.isEmpty());
+		}
+//参考2
+     public void behindOrder2(Tree root){
+            if(root==null)
+                return;
+            Stack<Tree> s = new Stack<Tree>();
+
+            Tree curNode; //当前访问的结点
+            Tree lastVisitNode; //上次访问的结点
+            curNode = root;
+            lastVisitNode = root;
+
+            //把currentNode移到左子树的最下边
+            while(curNode!=null){
+                s.push(curNode);
+                curNode = curNode.left_child;
+            }
+            while(!s.empty()){
+                curNode = s.pop();  //弹出栈顶元素
+                //一个根节点被访问的前提是：无右子树或右子树已被访问过
+                if(curNode.right_child !=null && curNode.right_child != lastVisitNode){
+                    //根节点再次入栈
+                    s.push(curNode);
+                    //进入右子树，且可肯定右子树一定不为空
+                    curNode = curNode.right_child;
+                    while(curNode!=null){
+                        //再走到右子树的最左边
+                        s.push(curNode);
+                        curNode = curNode.left_child;
+                    }
+                }
+                else{
+                    //访问
+                    System.out.print(curNode.val+" " );
+                    //修改最近被访问的节点
+                    lastVisitNode = curNode;
+                }
+            } //while
+        }
+//递归
+     private void traversal(TreeNode root, List<Integer> results) {
+        if (root == null) {
+            return;
+        }
+        
+        traversal(root.left, results);
+        traversal(root.right, results);
+        results.add(root.val);
+    }
+```
+
+### 19，树的一些操作
+
+##### 1，求深度
+
+[参考](<https://www.jianshu.com/p/bc31fb7b7f2c>)
 
