add push method

--- a/_posts/2019-01-15-git命令记录.md
+++ b/_posts/2019-01-15-git命令记录.md
@@ -114,7 +114,15 @@ author: Chris Rody
 
 解决：一般是shell命令没有在对应的文件包下
 
-#####  2，i want to do something
+#####  2，提交代码的用户名不对应
+
+```git
+# 全局设置自己的用户名和密码
+git config --global user.name "Dennis"
+git config --global user.email "dennis@top500corp.com"
+```
+
+
 
 
 
