--- a/_posts/2019-01-15-git命令记录.md
+++ b/_posts/2019-01-15-git命令记录.md
@@ -28,6 +28,12 @@ author: Chris Rody
 >
 > 5，git push -u origin master
 
+```shell
+$ git push <远程主机名> <本地分支名>:<远程分支名>
+# 或者
+$ git push -u <origin> <远程分支名>
+```
+
 ![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g2.png)
 
 ![地址格式](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/g3.png)
@@ -116,7 +122,7 @@ author: Chris Rody
 
 #####  2，提交代码的用户名不对应
 
-```git
+```shell
 # 全局设置自己的用户名和密码
 git config --global user.name "Dennis"
 git config --global user.email "dennis@top500corp.com"
