--- a/_posts/2019-01-15-git命令记录.md
+++ b/_posts/2019-01-15-git命令记录.md
@@ -26,7 +26,7 @@ author: Chris Rody
 >
 > 4，git commit -m "description"
 >
-> 5，git push -u origin master
+> 5，git push -u origin master    (-u是设置默认主机)
 
 ```shell
 $ git push <远程主机名> <本地分支名>:<远程分支名>
