--- a/_posts/2019-03-07-Eclipse使用心得.md
+++ b/_posts/2019-03-07-Eclipse使用心得.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: Chris Rody
-title: Eclipse使用心得
+title: Eclipse
 ---
 
 Eclipse一些使用经验的记录
@@ -19,7 +19,7 @@ Eclipse一些使用经验的记录
 >  **字体大小调整**，一处是控制台的字体，一处是主窗口
 >
 >     Window -> Preferences -> General -> Appearance -> Colors and Fonts -> Basic -> Text Font -> Edit 调节控制台字体大小
->     
+>    
 >     Window -> Preferences -> General -> Appearance -> Colors and Fonts -> Java -> Java Editor Text Font -> Edit 调节主窗口字体大小
 >
 > 调出debug的透视图，包括变量图等
