--- a/_posts/2021-5-12-《沧浪之水》.md
+++ b/_posts/2021-5-12-《沧浪之水》.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: Rody
-title: 沧浪之水
+title: 《沧浪之水》
 ---
 
 ## 行测大法 之 判断推理
@@ -16,69 +16,49 @@ title: 沧浪之水
 
 句：**一将功成万骨枯，古往今来都是如此，今天也不是历史的终结**
 
-```
-    在生活的方方面面便是如此，一个人的光鲜亮丽后边，是父母的悉心抚育，是朋友的舒心相助，是爱人的全心照料。事物存在必有其联系，而万物互联，剖析其中的核心要素，便能感知一二。
-    权利的游戏中，君主之下的士兵，同样都是生命一条，但是很诧异当时社会因姓氏而分的三六九等，兰尼斯特家族永不食言，但普通士兵投明军，其实追求的还是自己的酬银几两，自己的命运更多地还是依靠自己的战斗来维护。胜利了，将军攻成，而战友死伤无数。这其实是人们看问题的惯性使然，唯结果论，万骨枯的过程其实在庆功宴上，平添胜利的分量罢了。
-    脱贫攻坚之战的完全胜利，力度之大、规模之广、影响之深前所未有，的确谱写了人类反贫困历史的新篇章；但1800多名同志的生命光荣地定格在了脱贫攻坚征程中，诠释了共产党人的初心使命，成为了全国脱贫劳苦人民称颂的英雄。他们不能白白牺牲，我们要延续继承他们的抗争精神，用自己的行动于岗位做出巩固脱贫成果的一点贡献。
-```
+>在生活的方方面面便是如此，一个人的光鲜亮丽后边，是父母的悉心抚育，是朋友的舒心相助，是爱人的全心照料。事物存在必有其联系，而万物互联，剖析其中的核心要素，便能感知一二。
+>
+>权利的游戏中，君主之下的士兵，同样都是生命一条，但是很诧异当时社会因姓氏而分的三六九等，兰尼斯特家族永不食言，但普通士兵投明军，其实追求的还是自己的酬银几两，自己的命运更多地还是依靠自己的战斗来维护。胜利了，将军攻成，而战友死伤无数。这其实是人们看问题的惯性使然，唯结果论，万骨枯的过程其实在庆功宴上，平添胜利的分量罢了。
+>
+>脱贫攻坚之战的完全胜利，力度之大、规模之广、影响之深前所未有，的确谱写了人类反贫困历史的新篇章；但1800多名同志的生命光荣地定格在了脱贫攻坚征程中，诠释了共产党人的初心使命，成为了全国脱贫劳苦人民称颂的英雄。他们不能白白牺牲，我们要延续继承他们的抗争精神，用自己的行动于岗位做出巩固脱贫成果的一点贡献。
 
 句：**首先得把那个掌门人吃透，比别人吃的更透。我说：“潜入他的潜意识，六七年前我有机会，现在要找条缝钻进去，不容易了，路上有人步了重兵重重封锁着，让机会给你钻？大人物其实也是睡在鼓里，他哪里想到有人要吃透他，还要进入他的潜意识。”**
 
-```
-    其实这就是晋升之道吧，之前被耀仔说过自己缺乏社会经验，对于领导不太会说话，不会抬人，场面上的察言观色不太擅长，更不要说在一些玩乐之余的主动权掌握。挺复杂的，但是romei建议过的就是，这些到了单位慢慢学，就在想这个二傻子的话不无道理。虽说掌握这些需要时间技巧，但是我需要经历去结合出自己的行为处事方式，能到靠谱、个性、有趣的结合，便知足了。
-```
+>  其实这就是晋升之道吧，之前被耀仔说过自己缺乏社会经验，对于领导不太会说话，不会抬人，场面上的察言观色不太擅长，更不要说在一些玩乐之余的主动权掌握。挺复杂的，但是romei建议过的就是，这些到了单位慢慢学，就在想这个二傻子的话不无道理。虽说掌握这些需要时间技巧，但是我需要经历去结合出自己的行为处事方式，能到靠谱、个性、有趣的结合，便知足了。
 
 句：**克己复礼**
 
-```
-   儒家行为规范，自己跟小直萍说到的习俗的重要性，老人去世时候我们遵守法事的依据，但是自己论证得不够清晰，总是词不达意，所以缺乏阅读一些儒学社会学的书籍。
-```
+> 儒家行为规范，自己跟小直萍说到的习俗的重要性，老人去世时候我们遵守法事的依据，但是自己论证得不够清晰，总是词不达意，所以缺乏阅读一些儒学社会学的书籍。
 
 句：**把自己看得太金贵就金贵不起来，这是生活的辩证法。不把自己看成什么，才可能成为一点什么，一开始就把自己看成什么，那到头来什么也不是，这也是生活的辩证法。**
 
-```
-   生活处世的辩证法，是一种做人的道理。
-```
+> 生活处世的辩证法，是一种做人的道理。
 
 句：**精神大厦的天下意识千秋情怀，不过只是一种心灵情结罢了**
 
-```
-  有大志但不能疏于生活
-```
+> 有大志但不能疏于生活
 
 句：**自由是有些人的特权，你不要善良而一厢情愿地想象他们会用那么多条条框框把自己框住。这些年我看透了，心也变硬了，柔软的一部分像淬了火一样也有相当的硬度了。你不硬，不跟下面的人拉开距离，他能跳到你头上，稳稳地骑着你。**
 
-```
-   说得有些直白，或许就是官场中的弱肉强食吧，值得深思。
-```
+> 说得有些直白，或许就是官场中的弱肉强食吧，值得深思。
 
 句：**处长就那么回事，可什么不是那么回事？活着就是那么回事，有那么回事比没那么回事总好点。**
 
-```
-   人生是这样子么？
-```
+> 人生是这样子么？
 
 句：**大小之辨析因人而异，轻重之权衡各有不同。**
 
-```
-   个人有各个人的观点
-```
+> 个人有各个人的观点
 
 句：**纣以酒为池悬肉为林**
 
-```
-   了解下商纣王
-```
+> 了解下商纣王
 
 句：**良知和责任感是知识分子在人格上的自我命名**
 
-```
-   我觉得这可能是行政道路上自我在为人处事上跟自己的一个合理性妥协
-```
+> 我觉得这可能是行政道路上自我在为人处事上跟自己的一个合理性妥协
 
 句：**临环宇而小天下**
 
-```
-   安静的书桌轮，范仲淹的家国情怀。
-```
+> 安静的书桌轮，范仲淹的家国情怀。
 
