--- a/_posts/2093-08-08-《To Romei》.md
+++ b/_posts/2093-08-08-《To Romei》.md
@@ -1,10 +1,12 @@
 ---
 layout: post
 author: Rody
-title: 《To Romei》
+title: ToRomei
 ---
 
 #### 说些什么罢
+
+## 怎么她是天秤座
 
 > Romei不回我消息了，嗐，以后再提不起勇气跟小Romei分享事情了。不知怎的，流渡镇回来路上时你说的“回去之后要常联系哦”这句话，一下子蹦到了眼前。刚看到成都49中的事情，就觉得什么事大不过生死，但我们不再见在我这里还是挺悲的。。。哈哈哈
 
@@ -67,15 +69,13 @@ B站
 
 看到年迈老人的恩爱秀剪辑，感叹，这最长的电影，两个人的谢幕才是最纯正的天生烂漫。
 
-- 对齐
+- 毕业
 
-似乎已经对齐，不能给太大压力
+毕业顺利
 
-她很独立
+要顺利
 
-可能是吃堑长智
+去做那些普通而极具意义的凡事
 
-必须让自己快发光
-
-时间你再快些，我很急
+平常心
 
