--- a/_posts/2021-5-13-行测(资料分析).md
+++ b/_posts/2021-5-13-行测(资料分析).md
@@ -34,9 +34,8 @@ title: 行测/资料分析20题
 
 基期量=现期量/（1+r）
 
-|r|<=5%
-
 ```
+如果|r|<=5%
 A/1-r = A+A*r
 A/1+r = A-A*r
 ```
@@ -57,18 +56,19 @@ r=增长量/基期量
 
 **百分比化成分数**（求增长量，r 为分数）
 
-| 1/2=50%       | 1/4=25%       | 1/8=12.5%     | 1/16=6.25% |
-| ------------- | ------------- | ------------- | ---------- |
-| **1/3=33.3%** | **1/6=16.7%** | **1/12=8.3%** |            |
-| **1/5=20%**   | **1/10=10%**  | **1/20=5%**   |            |
-| **1/7=14.3%** | **1/14=7.1%** |               |            |
-| **1/9=11.1%** | **1/11=9.1%** |               |            |
-| **1/13=7.7%** | **1/15=6.7%** |               |            |
-| **1/17=5.9%** | **1/18=5.6%** | **1/19=5.3%** |            |
+|               |               |               |                |
+| ------------- | ------------- | ------------- | -------------- |
+| **1/2=50%**   | **1/4=25%**   | **1/8=12.5%** | **1/16=6.25%** |
+| **1/3=33.3%** | **1/6=16.7%** | **1/12=8.3%** |                |
+| **1/5=20%**   | **1/10=10%**  | **1/20=5%**   |                |
+| **1/7=14.3%** | **1/14=7.1%** |               |                |
+| **1/9=11.1%** | **1/11=9.1%** |               |                |
+| **1/13=7.7%** | **1/15=6.7%** |               |                |
+| **1/17=5.9%** | **1/18=5.6%** | **1/19=5.3%** |                |
 
 百分比一般是增长率
 
-增长量 = 现期 * r /（1+r）= 现期 / n +1     （ **n = 1 / |r|** ）
+增长量 = 现期 * r /（1+r）= 现期 / n +1     （ **n = 1 / r绝对值** ）
 
 #### 3，特殊增长率
 
@@ -110,7 +110,7 @@ A / B  *（1+b）/（1+a）  一般算部分占总体的比重
 
 **方法**：对比今年利率和去年利率的大小关系，即部分占总体的变化
 
-现期比-基期比=A/B - A/B * (1+b)/(1+a)= A/B * **(a-b)**/(1+a)  < |a-b|
+现期比-基期比=A/B - A/B * (1+b)/(1+a)= A/B * **(a-b)**/(1+a)  < a-b绝对值
 
 a是现期的增长率，b是基期的增长率
 
