--- a/_posts/2021-5-13-行测(资料分析).md
+++ b/_posts/2021-5-13-行测(资料分析).md
@@ -68,7 +68,9 @@ r=增长量/基期量
 
 百分比一般是增长率
 
-增长量 = 现期 * r /（1+r）= 现期 / n +1     （ **n = 1 / r绝对值** ）
+```
+增长量 = 现期 * r /（1+r）= 现期 / n +1     （ n = 1 / |r|）
+```
 
 #### 3，特殊增长率
 
@@ -110,9 +112,11 @@ A / B  *（1+b）/（1+a）  一般算部分占总体的比重
 
 **方法**：对比今年利率和去年利率的大小关系，即部分占总体的变化
 
-现期比-基期比=A/B - A/B * (1+b)/(1+a)= A/B * **(a-b)**/(1+a)  < a-b绝对值
+```
+现期比-基期比=A/B - A/B * (1+b)/(1+a)= A/B * **(a-b)**/(1+a)  < |a-b|
 
 a是现期的增长率，b是基期的增长率
+```
 
 **因此**
 
