--- a/_posts/2021-5-12-美其名.md
+++ b/_posts/2021-5-12-美其名.md
@@ -6,8 +6,18 @@ title: 美其名
 
 ## 语文，是什么
 
+### 1，雅名
+
 - 杜聿名
 
 聿：字初文始见于商代甲骨文及商代金文，其古字形像手执毛笔的样子，是为笔之初文。
 
 - 爱可
+
+### 2，哲思
+
+#### 鲁迅
+
+> 人的悲欢并不相通，我只是觉得他们吵闹
+>
+> 无穷的远方，无数的人们，都和我有关
