--- a/_posts/2021-5-13-行测(资料分析).md
+++ b/_posts/2021-5-13-行测(资料分析).md
@@ -113,7 +113,7 @@ A / B  *（1+b）/（1+a）  一般算部分占总体的比重
 **方法**：对比今年利率和去年利率的大小关系，即部分占总体的变化
 
 ```
-现期比-基期比=A/B - A/B * (1+b)/(1+a)= A/B * **(a-b)**/(1+a)  < |a-b|
+现期比-基期比=A/B - A/B * (1+b)/(1+a)= A/B * (a-b)/(1+a)  < |a-b|
 
 a是现期的增长率，b是基期的增长率
 ```
@@ -150,6 +150,8 @@ A/(1+a)*B/(1+b) = A/Bx(1+b)/(1+a)
 平均数差 = A/B - A/B * (1+b)/(1+a) =A/B * **(a-b)**/(1+a) 
 
 平均数增长率 r = **(a-b)**/(1+**b**) 
+
+注意对比：A/B * (a-b)/(1+a)   两期比重差（现期比-基期比）
 
 ```
 推导过程
