--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -350,13 +350,47 @@ hole 洞
 
 agreeable 和蔼的
 
+#### 2021-6-6
 
+what if this plan fail 万一这个计划失败了怎么办
 
+what if 如果...将
 
+can you forgive me ? 你能原谅我么
 
+that's what friends are for 朋友就该如此
 
+raised 长大、抚养长大
 
+a symbol of Venice,Italy 意大利威尼斯的象征
 
+need to hear 想听到的
+
+i'm asking you to trust me 我想让你相信我
+
+austrian physicist 奥地利物理学家
+
+quantum mechanics 量子力学
+
+different things written and said 不同的著作和说法
+
+you need to only look into a mirror 只要照照镜子就好了
+
+comet 彗星
+
+Hiroshima bomb 广岛原子弹
+
+honesty 诚实
+
+#### 2021-6-7
+
+flesh 肉体、肌肉
+
+in the flesh 亲眼、亲身
+
+how many times do i have to say it ? 要我说多少次才行
+
+you eat when we say you eat .我们让你吃的时候 你就吃
 
 
 
