--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -392,9 +392,41 @@ how many times do i have to say it ? 要我说多少次才行
 
 you eat when we say you eat .我们让你吃的时候 你就吃
 
+#### 2021-6-8
 
+antarctica 南极洲
 
+antarctic 南极的
 
+the antarctic 南极
+
+vanish 消失 、不见
+
+public servant 公务员、公职人员 
+
+civil servant 公务员
+
+servant 仆人、佣人、服务人员、雇员
+
+civil 社会的、公众的、民事的
+
+i come as the King's servant and with his authority. 我奉命并代表国王而来
+
+Wales 威尔士
+
+admit 承认
+
+current path 当前的路
+
+virtue 美德、长处
+
+virtual 实际上的、几乎...的、事实上的
+
+invisible 看不见的、藏匿的
+
+invent 发明、创造
+
+inventory 详细目录
 
 
 
