--- a/_posts/2021-06-05-《这个社会会好吗》.md
+++ b/_posts/2021-06-05-《这个社会会好吗》.md
@@ -170,6 +170,8 @@ title: 《这个社会会好吗》 熊培云/著
 
 句：像北宋大家张载那样把“为天地立心，为生民立命，为往圣继绝学，为万世开太平”当做自己的使命。
 
+> 横渠四句
+
 句：一是感谢出生在农村，让我接受大地山川、日月星辰的哺育，能够生活在中国最底层社会，接时代的地气；二是感谢读书。我说如果上学改变了我的生活，那么读书则改变了我的人生。前面已经说过，上学和读书是不一样的。上学像完成任务，学完了最后还得接受别人的考核，而读书则是另一回事，是你在寻找你所需要的东西。
 
 #### 18，太太
