--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -428,5 +428,53 @@ invent 发明、创造
 
 inventory 详细目录
 
+#### 2021-6-9
 
+If the Germans capture the city，the entire country will collapse. 如果德国人占领了这座城市，整个国家就崩溃了
+
+turtle 乌龟
+
+orchid species 兰花种类
+
+bottlenose dolphin 宽吻海豚
+
+inquisitive 好奇的（人）、有质疑的（言行）
+
+myth 神话、传说
+
+enduring 持久的、耐久的
+
+an enduring myth 长久的一个说法
+
+have the ability to be alone 不能独处
+
+fighter 战士
+
+patriot 爱国者
+
+live my life 过自己的生活
+
+the fastest 最快的
+
+sibling 兄弟、姊妹
+
+verify news 核实新闻的真实性
+
+under my supervision 我的监管下
+
+i understand what you did for me 我明白你为我做了什么
+
+camouflage 伪装
+
+general 将军
+
+eternal 永久的、永恒的
+
+i was full of so much pride that  it was a sign of weakness for me to ask for assistance.
+
+我太过骄傲，求助对于我来说是软弱的表象。
+
+compliment 赞美、恭维
+
+complement 映衬、衬托
 
