--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -478,3 +478,57 @@ compliment 赞美、恭维
 
 complement 映衬、衬托
 
+#### 2021-6-17
+
+yawn 打呵欠
+
+when the prices of goods and services rise rapidly,families and businesses suffer 家庭和企业受到影响
+
+i'm not who i thought i was , okay? 我不认为我是我认为的那个人
+
+confess 忏悔、认罪
+
+blow 吹起，失败的，吹制
+
+it goes in 球进了
+
+but the whistle had been blown 终场哨已经被吹响
+
+greet 打招呼，迎接，给与...反应
+
+nature lovers 热爱大自然的人们
+
+eagerly 迫切的，迫不及待的
+
+crop 庄稼，收成，农田
+
+pests 害虫，讨厌的人
+
+a witch cast a spell on me 一个女巫对我下了咒语
+
+spell 拼写，魔咒，施魔法
+
+cast 投、扔
+
+bee 蜜蜂
+
+honeybees 蜜蜂
+
+after all these weeks 这么多星期之后
+
+i thought it worth the risk 我觉得值得冒险
+
+try thinking of him instead of honey 想想他吧，别再想蜂蜜了
+
+since its birth 自诞生以来
+
+machinery 机械，机器
+
+we want to live by each other's happiness,not by each other's misery 
+
+靠彼此的幸福生活，而不是彼此的痛苦
+
+misery 痛苦、贫穷、让人痛苦的人
+
+
+
