--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -530,5 +530,41 @@ we want to live by each other's happiness,not by each other's misery
 
 misery 痛苦、贫穷、让人痛苦的人
 
+#### 2021-6-18
 
+what do you mean what do i do ?你说我是做什么的是什么意思
+
+stockbroker 股票经纪人
+
+inherit 继承
+
+swamp 沼泽
+
+stand 站立，立场，忍受
+
+make judgements about me and label me 给我下结论、贴标签
+
+sputnik 人造地球卫星
+
+abandon 抛弃
+
+with high expectation 带着很高的期望
+
+pray you don't disappoint me 希望你不要让我失望
+
+best selling product of all time 最畅销的产品 有史以来
+
+Rubik‘s cube 魔方
+
+pupils 瞳孔，小学生
+
+fusion 融合
+
+new fusion-based energy source 新型融合型能源
+
+eyepatch 眼罩
+
+tough 强硬
+
+roadside ditch 路边的水沟
 
