--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -568,3 +568,46 @@ tough 强硬
 
 roadside ditch 路边的水沟
 
+#### 2021-6-19
+
+irritate 惹怒，激怒
+
+disturb 打扰
+
+predictable 俗套的，可预测的
+
+in each other's country 在彼此的国家
+
+consider it done 包在我身上
+
+consider 考虑，评判，认为
+
+was it hard to grow up in the suburbs 在郊外长大很艰难么
+
+suburb 郊区
+
+instinct 本能，天资
+
+by instinct 凭直觉的，出于本能的
+
+let your instincts guide you 跟着直觉走
+
+encounter sth 遭遇
+
+encounter sb 偶然碰到，撞见
+
+the next day they encountered  a group of Shoshones 第二天他们碰见了一群肖肖尼人
+
+how come you never told me that before? 之前你为什么不告诉我
+
+because we weren't friends before 因为我们之前不是朋友
+
+infected people 感染者
+
+responsible 有责任感的，负责任的
+
+responsible for 为...负责
+
+living cells constantly renew themselves.  活细胞不断地自我更新
+
+constantly 不变的，不断地，中心的（人），常数
