--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -611,3 +611,26 @@ responsible for 为...负责
 living cells constantly renew themselves.  活细胞不断地自我更新
 
 constantly 不变的，不断地，中心的（人），常数
+
+#### 2021-6-23
+
+humor 幽默，好玩，诙谐
+
+humors 体液
+
+has increased 17 fold 增加了17倍
+
+glasses 眼镜
+
+contact lenses 隐形眼镜
+
+laser refractive surgery 激光矫正手术
+
+refractive 折射的
+
+receive attention 获得关注
+
+laws of physics 物理法则
+
+> 状态不好，先不练习了。
+
