--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -634,3 +634,34 @@ laws of physics 物理法则
 
 > 状态不好，先不练习了。
 
+#### 2021-6-24
+
+it affects nearly 1 billion people 影响将近十亿人
+
+arose in 出现  arise的过去式
+
+in Northeastern Africa 非洲东北部
+
+racism 种族歧视，种族主义
+
+patient 病人
+
+at times 有时候
+
+organism 有机体，生物
+
+even in defeat 即使战败
+
+commit a crime 犯罪
+
+experts studying in the field of psychology 心理学专家
+
+the world was much less populated 人口非常稀少
+
+the maniac 疯子，外星人，失去理智的人
+
+steadfast 固定不变的，钟情的
+
+coast 海岸，海边
+
+coastal plain 沿海平原
