--- a/_posts/2021-5-12-书目.md
+++ b/_posts/2021-5-12-书目.md
@@ -256,3 +256,35 @@ title: 博学从书
 
 雾都孤儿
 
+### 3，需要背诵
+
+#### 1，毛泽东
+
+##### 念奴娇—昆仑
+
+>横空出世，莽昆仑，阅尽人间春色。
+>
+>飞起玉龙三百万，搅得周天寒彻。
+>
+>夏日消溶，江河横溢，人或为鱼鳖。
+>
+>千秋功罪，谁人曾与评说？
+>
+>而今我谓昆仑：不要这高，不要这多雪。
+>
+>安得倚天抽宝剑，把汝裁为三截？
+>
+>一截遗欧，一截赠美，一截还东国。
+>
+>**太平世界，环球同此凉热。**
+
+#### 《七律·到韶山》
+
+>别梦依稀咒逝川，故园三十二年前。
+>
+>红旗卷起农奴戟，黑手高悬霸主鞭。
+>
+>**为有牺牲多壮志，敢教日月换新天。**
+>
+>喜看稻菽千重浪，遍地英雄下夕烟。
+
