--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -665,3 +665,71 @@ steadfast 固定不变的，钟情的
 coast 海岸，海边
 
 coastal plain 沿海平原
+
+#### 2021-6-25
+
+three-dimensional wolrd 三维世界
+
+disgrace 丑事，耻辱
+
+disgrace sb 使某人蒙羞
+
+this planet was struck by an extraterrestrial object 这颗行星被一颗外星物体击中
+
+extraterrestrial 外太空的，外星人
+
+struck strick的过去分词，击打，碰撞
+
+advocate 主张，拥护，保护律师、辩护律师
+
+right advocates 权益保护律师
+
+fantastic 极好的
+
+people want justice restored 希望恢复争议
+
+therefore 于是，因此，所以
+
+I think，therefore i am. 我思，故我在
+
+lead a normal life. 过正常的生活
+
+crave 渴望得到 crave for sth / crave sth 
+
+is your mouth watering？ 你在流口水么
+
+stuff 东西，财产，行李，食物
+
+i'll cook all kinds of stuff for you. 我会为你做各种食物
+
+transplant 移植器官，移栽，迁居的人
+
+#### 2021-6-26
+
+why isn't the issue here who i am? 为什么在这儿，我是谁一点都不重要么？
+
+Vietnam 越南
+
+the vietnam war began as a regional conflict  and became one of history's worst humanitarian catastrophes
+
+越南战争一开始是地区冲突
+
+后来变成史上最惨无人道的灾难
+
+catastrophes 大灾难，惨败
+
+humanitarian 慈善家，人道主义的
+
+humanity 人道，人，人性       /hjuˌmænɪˈtɛriən/
+
+pyramid 金字塔
+
+visa 签证
+
+passport 护照
+
+smallpox 天花
+
+epidemics  流行病
+
+Egypt 埃及
