--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -733,3 +733,44 @@ smallpox 天花
 epidemics  流行病
 
 Egypt 埃及
+
+#### 2021-6-27
+
+evidence 证据
+
+evident 明显的，显而易见的，显然的
+
+subjective 主观的
+
+compose 为。。谱曲，写，创造
+
+extremely 极其的，非常的
+
+letter 信件
+
+make you intelligent 让你变聪明，有智慧的
+
+sensitive 敏感的，小心提及的
+
+in a delicate balance 微妙的平衡中
+
+delicate 微妙的，易碎的
+
+equivalent 对等，相应物   同等的
+
+in a lifetime 人的一生
+
+i heard enough last night 昨晚我听够了
+
+
+
+
+
+
+
+
+
+
+
+
+
