--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -762,6 +762,38 @@ in a lifetime 人的一生
 
 i heard enough last night 昨晚我听够了
 
+#### 2021-6-28
+
+urban 城市的
+
+in an urban area 都市区
+
+what we have in common ？ 我们有什么共同之处
+
+you're just somebody that i used to know 你不过是我以前认识的一个人罢了
+
+at Stanford 在斯坦福大学
+
+ultimate 终极的，最终的
+
+gossips 谣言
+
+for once 这一次
+
+peacock 孔雀
+
+container 集装箱
+
+#### 2021-6-29
+
+kilogram 千克
+
+neurons 神经元
+
+uphold 维护、支撑
+
+locked himself in his room 把自己锁在房间里
+
 
 
 
