--- a/_posts/2093-08-08-《To Romei》.md
+++ b/_posts/2093-08-08-《To Romei》.md
@@ -84,3 +84,17 @@ Romei毕业顺利
 
 平常心
 
+- 毕业典礼
+
+突然看到重大一名学霸的毕业典礼的代表发言，才知道原来romei毕业了，应该也拍了很好看的毕业照，参加了可能闷热但是开心的略显躁动的毕业典礼，可是我却一点不得而知。
+
+也罢，喜欢她只是我的个人选择，不代表什么，这是另类“求职”试的双向交集。她应该知道我的意思，自尊告诉我我不能再多打扰她，近期的态度应该就是她的回应。
+
+别了，那个能撒泼和我嬉闹的romei，以后就是罗梅同志了。
+
+`祝前途似海，一切顺利！`
+
+- The end
+
+
+
