--- a/_posts/2092-5-19-党史记录.md
+++ b/_posts/2092-5-19-党史记录.md
@@ -34,27 +34,33 @@ author: Rody
 
 1921年7月
 
-#### **8、四个自信**
-
-道路自信、理论自信、制度自信、文化自信。
-
-#### **9、“五位一体”总体布局**
+#### 8、“五位一体”总体布局
 
 经济建设、政治建设、文化建设、社会建设、生态文明建设。
 
-#### **10、四个意识**
+`增强四个意识，坚定四个自信，做到两个维护`
+
+#### 9、四个意识
 
 政治意识、大局意识、核心意识、看齐意识。
 
-#### **11、两学一做**
+#### 10、四个自信
+
+道路自信、理论自信、制度自信、文化自信。
+
+#### 11、两个维护
+
+维护习近平党中央的核心、全党的核心地位，维护党中央权威和集中统一领导
+
+#### **12、两学一做**
 
 学党章党规、学系列讲话，做合格党员。
 
-#### **12、党员四个合格**
+#### **13、党员四个合格**
 
 政治合格、品德合格、执行纪律合格、发挥作用合格。
 
-#### **13、社会主义核心价值观**
+#### **14、社会主义核心价值观**
 
 （国家层面）富强、民主、文明、和谐；
 
@@ -62,9 +68,15 @@ author: Rody
 
 （个人层面）爱国、敬业、诚信、友善。
 
-#### **14、中国共产党人的初心和使命**
+#### **15、中国共产党人的初心和使命**
 
 为中国人民谋幸福，为中华民族谋复兴。
+
+#### 16、三大作风
+
+党的七大，理论和实践相结合的作风，和人民群众紧密联系在一起的作风，自我批评的作风
+
+确立毛泽东思想在全党的指导地位
 
 ------
 
