--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -428,6 +428,10 @@ invent 发明、创造
 
 inventory 详细目录
 
+invite 邀请
+
+invitation 邀请
+
 #### 2021-6-9
 
 If the Germans capture the city，the entire country will collapse. 如果德国人占领了这座城市，整个国家就崩溃了
@@ -794,7 +798,65 @@ uphold 维护、支撑
 
 locked himself in his room 把自己锁在房间里
 
+scary experience 可怕经历
 
+ridiculous 荒谬的
+
+stretch 伸直，绵延，拉长
+
+sheriff 警长、州长
+
+tribe 部落，大家庭
+
+conscience 良心，正义感
+
+nod 点头，点头示意
+
+urban areas 城市
+
+environmental 环境的
+
+encounter 遭遇，经历，遇到
+
+radiation 辐射
+
+in time 最终，及时，赶上
+
+project 预测，项目
+
+projection 预测，投影，投射
+
+within seconds 几秒内
+
+#### 2021-6-30
+
+agriculture 农业
+
+messy 乱糟糟的
+
+a sustainable friendship model 可持续发展的友谊模式
+
+disappear 消失，不见，不复存在
+
+one third 三分之一
+
+population 人口
+
+charcoal 木炭，炭灰色的
+
+deliberate 刻意的，谨慎的
+
+disobey 不服从，不服从某人
+
+museum 博物馆
+
+B.C before Christ 基督以前，公元前
+
+A.D Anno Domini 主的生年，公元
+
+camouflage 伪装
+
+businesses 企业，生意，商业
 
 
 
