--- a/_posts/2021-5-13-行测(资料分析).md
+++ b/_posts/2021-5-13-行测(资料分析).md
@@ -106,7 +106,7 @@ A / B  *（1+b）/（1+a）  一般算部分占总体的比重
 2，先算基期比重，再根据（1+b）/(1+a)
 ```
 
-#### 3，两期比重
+#### 3，两期比重差
 
 **题型**：有“占”字，且两个时间
 
@@ -134,7 +134,7 @@ a是现期的增长率，b是基期的增长率
 
 #### 2，基期平均数
 
-A/(1+a)*B/(1+b) = A/Bx(1+b)/(1+a)
+A/(1+a)/B/(1+b) = A/Bx(1+b)/(1+a)
 
 ```
 1，截位直除
@@ -147,11 +147,11 @@ A/(1+a)*B/(1+b) = A/Bx(1+b)/(1+a)
 
 平均数的增长率
 
-平均数差 = A/B - A/B * (1+b)/(1+a) =A/B * **(a-b)**/(1+a) 
+**两期平均数差** = A/B - A/B * (1+b)/(1+a) =A/B * (a-b)/(1+**a**) 
 
-平均数增长率 r = **(a-b)**/(1+**b**) 
+**两期比重差**：A/B * (a-b)/(1+**a**) （现期比-基期比）
 
-注意对比：A/B * (a-b)/(1+a)   两期比重差（现期比-基期比）
+**平均数增长率 r** = **(a-b)**/(1+**b**) 
 
 ```
 推导过程
