--- a/_posts/2092-5-19-日常语料.md
+++ b/_posts/2092-5-19-日常语料.md
@@ -30,6 +30,8 @@ author: Rody
 
 ### 二，生词积累
 
+#### 1，生词
+
 泥淖nao
 
 擘bo画：筹画，安排
@@ -46,7 +48,23 @@ author: Rody
 
 撰zhuan写：写作
 
-泽被后世，zé pī hòu shì，意思是恩惠遍及到后代的人民。 出自《崇高的理想》
+#### 2，成语
+
+**泽被后世**，zé pī hòu shì，意思是恩惠遍及到后代的人民。 出自《崇高的理想》
+
+**饮鸩zhen止渴**：传说中的毒鸟，用它的羽毛浸的酒喝了能毒死人。
+
+喝毒酒解渴。比喻用错误的办法来解决眼前的困难而不顾严重后果。
+
+**奉为圭臬**（gui nie）：把某些言论尊敬地当成自己的准则。
+
+**拾人牙慧**：比喻抄袭或因袭别人的言论或观点，没有自己的独立见解。
+
+**釜底抽薪**：（中性词）把柴火从锅底抽掉，才能使水止沸。比喻从根本上彻底解决问题。
+
+> 临渊羡鱼，不如退而结网；扬汤止沸，不如釜底抽薪。
+
+
 
 ### 三，文言文积累背诵
 
