--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -858,6 +858,68 @@ camouflage 伪装
 
 businesses 企业，生意，商业
 
+#### 2021-7-2
+
+impacts 影响
+
+socio-economic status 社会经济地位
+
+access to energy 获得能量
+
+species 物种
+
+no point in treating him 治疗已无意义
+
+take off 起飞
+
+take a long swim in the lake 湖里长距离游泳
+
+#### 2021-7-3
+
+quantum 量子，量子的，数量份额
+
+mechanic 力学，机械学，技术
+
+launch 开创，发射，推出
+
+photoelectric effect 光电效应
+
+photoelectric  光电的
+
+psychological 心理学的
+
+promote 推广，宣传，发扬
+
+The inhabitants must migrate, hibernate, or face months of near starvation
+
+inhabitants 居民，栖息动物
+
+hibernate 冬眠，不活跃
+
+starvation 饥饿
+
+we shall assist you 要我们帮你 
+
+under two conditions 有两个条件
+
+negotiable  可磋商的，可转让的
+
+negotiation 谈判，协商
+
+fertile 肥沃的，有生育能力的，丰富的
+
+river valleys 河谷
+
+valleys 山谷，
+
+
+
+
+
+
+
+
+
 
 
 
