--- a/_posts/2092-5-19-党史记录.md
+++ b/_posts/2092-5-19-党史记录.md
@@ -4,6 +4,8 @@ title: 党的基本
 author: Rody
 ---
 
+### 党的基本知识1
+
 #### **1、党的性质**
 
 中国共产党是中国工人阶级的先锋队，同时是中国人民和中华民族的先锋队，是中国特色社会主义事业的领导核心，代表中国先进生产力的发展要求，代表中国先进文化的前进方向，代表中国最广大人民的根本利益。
@@ -72,13 +74,11 @@ author: Rody
 
 为中国人民谋幸福，为中华民族谋复兴。
 
-#### 16、三大作风
+#### **16、三大作风**
 
-党的七大，理论和实践相结合的作风，和人民群众紧密联系在一起的作风，自我批评的作风
+党的七大，确立毛泽东思想在全党的指导地位
 
-确立毛泽东思想在全党的指导地位
-
-------
+理论联系实际，密切联系群众，批评与自我批评
 
 #### **入党动机**
 
@@ -88,3 +88,32 @@ author: Rody
 
 第三，要有在生产、工作、学习和社会生活中起先锋模范作用的觉悟。
 
+### 党的基本知识2
+
+#### **1. 党的根本大法**
+
+党章是党的根本大法，是全党必须遵守的总规矩。中共二大上诞生了党历史上的第一部党章。
+
+#### **2. 党的最高领导机关**
+
+党的全国代表大会及其产生的中央委员会。
+
+#### **3. 党的三大法宝**
+
+统一战线、武装斗争、党的建设。
+
+#### **4. 十九大主题**
+
+不忘初心，牢记使命，高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利，为实现中华民族伟大复兴的中国梦不懈奋斗。
+
+#### **5. “四风”问题**
+
+形式主义、官僚主义、享乐主义、奢靡之风。
+
+#### **6. 中国梦及其本质**
+
+实现中华民族伟大复兴：**国家富强、民族振兴、人民幸福**。
+
+#### **7. “四个全面”战略布局**
+
+全面建成小康社会、全面深化改革、全面依法治国、全面从严治党。
