--- a/_posts/2092-5-19-日常语料.md
+++ b/_posts/2092-5-19-日常语料.md
@@ -218,6 +218,8 @@ author: Rody
 
 为有牺牲多壮志，敢叫日月换新天
 
+雄关漫道真如铁，而今迈步从头越
+
 ### 十、民族
 
 ### 十一、国家
@@ -306,5 +308,5 @@ author: Rody
 
 百年党史的主流和本质有了更精准、更厚重、更与时俱进的阐述
 
-#### 
+
 
