--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -912,7 +912,45 @@ river valleys 河谷
 
 valleys 山谷，
 
+#### 2021-7-12
 
+various 不同的
+
+accomplish 完成
+
+the Republic 共和国
+
+prosperity 繁荣
+
+reap the benefit 收获好处
+
+reap 获得，收割
+
+squid 鱿鱼
+
+proceed 行事，继续向前
+
+separate 分隔，分开，区分
+
+it's also crucial to separate fact from opinion 区分事实和意见
+
+peacock 孔雀，虚荣的人
+
+for they had invented fireworks 发明了烟花
+
+coexist with 与...共存，并存
+
+arrogance 傲慢，自负
+
+dispute 争论，争端
+
+condemn 谴责
+
+By whose authority do you condemn me？ 谁赋予了你谴责我的权利
+
+cattle 牛，牲畜，胆怯盲从的人
+
+repent 忏悔，感到后悔
 
 
 
