--- a/_posts/2021-5-12-行测(判断推理).md
+++ b/_posts/2021-5-12-行测(判断推理).md
@@ -6,6 +6,17 @@ title: 行测/判断推理40题
 
 ## 行测大法 之 判断推理
 
+```
+自我规律总结
+一、图形推理
+1，曲线直线交点数
+2，最小图形形状
+3，对称轴穿过线or点
+4，考虑边的数目，或者内部边的数目
+```
+
+
+
 ### 判断推理
 
 #### 1，图形推理
