--- a/_posts/2021-5-13-行测(言语理解).md
+++ b/_posts/2021-5-13-行测(言语理解).md
@@ -6,7 +6,23 @@ title: 行测/言语理解40题
 
 # 行测大法 之 言语理解
 
+### 模拟经验总结
+
+```
+1，言语错误的选项也存在无原因排除正确选项，不要完全凭直觉，答案更多是出现在题目线索中。
+```
+
 ## 言语理解
+
+```
+个人方法总结：
+1，不用直接看完整句，瞟一眼背景，重点盯着空格词位置。
+2，一定要看清所有选项再确定答案
+3，答案一般都会有主题词或者主题词的形象表述
+4，选词填空的不认识的词要从字面理解，不要随意排除一个无根据的错误项
+```
+
+
 
 ### 一，片段阅读
 
