--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -952,6 +952,44 @@ cattle 牛，牲畜，胆怯盲从的人
 
 repent 忏悔，感到后悔
 
+#### 2021-7-13
+
+resolution 决议，决定，解决
+
+revolution 革命
+
+A resolution of independence 独立决议
+
+privilege 特权，优待，荣誉
+
+intelligence 智慧，情报，情报人员
+
+engine 引擎，马达
+
+linkage 联动，联系
+
+sufficient 足够的，适合的
+
+self-sufficient 自足的
+
+artificial 非天然的，人工智能
+
+being 生物，本性，存在
+
+sniff 吸鼻子，嗅，闻
+
+molecule 分子
+
+nostril 鼻孔
+
+ensure 保证，确保
+
+insure 保证，给...保险
+
+how do we ensure the greatest profit at the lowest risk. 低风险确保高利润
+
+the more a country develops，the more meat its inhabitants sonsume.  国家越发达，消费的肉类越多
+
 
 
 
