--- a/_posts/2092-5-19-申论(小题分析).md
+++ b/_posts/2092-5-19-申论(小题分析).md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: 申论/素材
+title: 申论/小题分析
 author: Rody
 ---
 
 不到长城非好汉，不进省直誓不还
 
-## 1、哪方面素材
+## 雄关漫道真如铁
 
-## 2，
+## 
 
 
 
