--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -738,6 +738,8 @@ epidemics  流行病
 
 Egypt 埃及
 
+Egyptian 埃及的
+
 #### 2021-6-27
 
 evidence 证据
@@ -988,7 +990,43 @@ insure 保证，给...保险
 
 how do we ensure the greatest profit at the lowest risk. 低风险确保高利润
 
-the more a country develops，the more meat its inhabitants sonsume.  国家越发达，消费的肉类越多
+the more a country develops，the more meat its inhabitants consume.  国家越发达，消费的肉类越多
+
+#### 2021-7-14
+
+endow sb with 赋予某人某物，给...捐助
+
+pursue 追赶，继续，致力于
+
+pursuit 寻求，嗜好，追求
+
+all its plants and animals 它所有的动植物
+
+the planet's surface 星球表面
+
+hospitality 友好款待，酒店业
+
+oil tanker 油罐车，运油轮
+
+prisoner 犯人，囚犯
+
+devastate 彻底摧毁，压垮
+
+elusive 躲避的，难懂的
+
+there's nothing more elusive than an obvious fact. 真相往往不是看起来这么简单
+
+inspiration 灵感，动力
+
+television 电视，电视行业
+
+pregnancy 怀孕
+
+uppermost  最高的，最重要的
+
+decay 腐化，衰败，分解
+
+evade 逃避，避开
 
 
 
