--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -1028,7 +1028,45 @@ decay 腐化，衰败，分解
 
 evade 逃避，避开
 
+#### 2021-7-16
 
+markings 斑点，记号，标记
+
+decorative 可做装饰的
+
+human remains 人类遗骸
+
+colony 群体，殖民地，聚居地
+
+cartoon 卡通，连环画
+
+cartoonist 漫画家
+
+soak 浸湿，泡
+
+soak up 吸收，吸取（信息，知识）
+
+manner 方式，姿态，举止
+
+mannerism 特殊习惯，风格主义
+
+clothing 衣服
+
+shrunken 缩小的
+
+diarrhea 腹泻
+
+having dirrhea 
+
+paralyze 瘫痪
+
+paralysis 瘫痪
+
+waist 腰
+
+confine 局限，关押，把...限制在
+
+wheelchair 轮椅
 
 
 
