--- a/_posts/2092-5-19-申论(素材积累).md
+++ b/_posts/2092-5-19-申论(素材积累).md
@@ -22,5 +22,123 @@ author: Rody
 >
 > 3，用三元素写字：横线，竖线，斜线
 
+### 二，“平”语近人
 
+#### 1，一枝一叶总关情
+
+- 来源
+
+> 《潍县署中画竹呈年伯包大丞括 / 墨竹图题诗》
+>
+> 郑燮（清代）郑板桥
+>
+> 衙斋卧听萧萧竹，疑是民间疾苦声；
+>
+> 些小吾曹州县吏，一枝一叶总关情。
+
+- 民心
+
+>《牧民》 
+>
+>管子（先秦）
+>
+>政之所兴在顺民心
+>
+>政之所废在逆民心
+
+感悟：一个政党，一个政权，其前途命运最终取决于人心向背。
+
+- 焦裕禄
+
+> 焦裕禄
+>
+> 《念奴娇·追思焦裕禄》
+>
+> 习近平（1990）
+>
+> 生也沙丘，死也沙丘。
+>
+> 为官一任，造福一方。
+
+执政为民，人民至上
+
+**《县委书记的榜样**-焦裕禄》
+
+习：以造福人民为最大政绩，急群众之所急，想群众之所想
+
+焦裕禄“心中装着全体人民，唯独没有他自己”
+
+新时代中国共产党人的政绩观，人民观，价值观
+
+现在有的地方提出：最多跑一次，只进一扇门，让老百姓少跑腿，干部多办事，让人民放心、安心、舒心。
+
+- 为民
+
+> 清万斯（清代）
+>
+> 利民之事，丝发必兴；
+>
+> 厉民之事，毫末必去。
+>
+> 习：历史是人民书写的，一切成就归功于人民，只要我们深深扎根于人民，紧紧依靠人民，就可以获得无穷的力量。风雨无阻，奋勇向前。
+
+习：时代是出卷人，我们是答卷人，人民是阅卷人
+
+永远与人民群众同呼吸，共命运，心连心，向人民交出满意的答卷。
+
+以为人为中心的发展思想是习近平新时代中国特色社会主义思想的主要内容，显著特征
+
+#### 2，治国有常民为本
+
+- 重民生
+
+> 治国有常 而利民为本
+
+发展为了人民，发展依靠人民，发展成果由人民共享
+
+“小康不小康，关键看老乡”
+
+脱贫攻坚工程，是当代中国最大的民生工程，也是当代中国最大的利民、惠民、富民工程
+
+- 兴民德
+
+> 管子
+>
+> 仓廪实而知礼节，
+>
+> 衣食足而知荣辱。
+
+习总书记：
+
+修德，既要立意高远，又要立足平实，要立志报效祖国 服务人民   这是大德
+
+> 见善则迁 有过则改
+
+对于一个国家和民族来说，最持久，最广泛，最深层的力量就是全民共同认同，遵循和恪守的核心价值观。
+
+“记住要求 心有榜样 从小做起 接受帮助”
+
+- 得民心
+
+习总书记：
+
+“任何时候都不能忘却，老百姓是天，老百姓是地，忘记了人民，脱离了人民，我们就会成为无源之水 无本之木 就会一事无成，我们要坚持党的群众路线，始终保持党同人民的血肉联系，始终接受人民群众批评和监督”
+
+心中常思百姓疾苦，脑中常谋富民之策
+
+> 荀子
+>
+> 水能载舟，亦能覆舟
+>
+> “民本思想” 朝代更替就能看得出来
+
+习：“把增进人民福祉，促进人的全面发展作为发展的出发点和落脚点。”
+
+习在知青岁月当中，有八个月时间在赵家河村驻村，处理村里一些日常的行政工作，同时还和村里的老百姓一起打土坝，修梯田，植树造林，给当地老百姓留下了非常深刻的印象。
+
+习：我们要把人民拥护不拥护，赞成不赞成，高兴不高兴，答应不答应作为衡量一切工作得失的根本标准。
+
+金杯银杯 不如老百姓的口碑
+
+金奖银奖 比不上老百姓的夸奖
 
