--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -1068,6 +1068,38 @@ confine 局限，关押，把...限制在
 
 wheelchair 轮椅
 
+#### 2021-7-19
+
+simplicity  简单、朴素
+
+a proud colony 骄傲部落
+
+realization 实现
+
+mount 骑上、开展、举行、安装
+
+mount some sort of investigation 安排一些调查
+
+interesting 有趣的
+
+assessment 分析
+
+assess 评估、为...估价
+
+assessment 分析
+
+unhappy 不开心的、不适当的
+
+vain 自负的、徒劳无益的
+
+insecure 不安全的、没有信心的
+
+incredibly 及其、非常
+
+crucial 关键的、决定性的
+
+
+
 
 
 
