--- a/_posts/2092-5-19-党史记录.md
+++ b/_posts/2092-5-19-党史记录.md
@@ -116,4 +116,21 @@ author: Rody
 
 #### **7. “四个全面”战略布局**
 
-全面建成小康社会、全面深化改革、全面依法治国、全面从严治党。
+全面建成小康社会（全面建设社会主义现代化国家）、全面深化改革、全面依法治国、全面从严治党。
+
+### 党的部分理论
+
+#### 1，三个代表
+
+中国共产党代表中国先进生产力的发展要求，代表中国先进文化的前进方向，代表中国最广大人民的根本利益
+
+
+
+### 党的奋斗历程
+
+#### 1，党引领的成就
+
+> 为了实现中华民族伟大复兴，中国共产党团结带领中国人民，创造了新民主主义革命的伟大成就，创造了社会主义革命和建设的伟大成就，创造了改革开放和社会主义现代化建设的伟大成就，创造了新时代中国特色社会主义的伟大成就。
+
+
+
